--- a/index.html
+++ b/index.html
@@ -73,48 +73,79 @@
         </div>
     </header>
 
-    <!-- Hero -->
-    <section class="hero">
-        <div class="container hero__container">
-            <div class="hero__line"></div>
-            <section class="hero__body">
-                <div class="hero__content">
-                    <h1 class="hero__heading">We’re a creative design agency.</h1>
-                    <p class="hero__desc">A brilliant, modular agency template for startup’s build yours toady.</p>
-                    <div class="hero__cta-group">
-                        <button class="btn">Get in touch</button>
-                        <button class="hero__watch">
-                            <div class="hero__watch-circle">
-                                <img loading="lazy" src="assets/icon/play.svg" alt="" class="hero__watch-icon">
+    <main class="main">
+        <!-- Hero -->
+        <section class="hero">
+            <div class="container hero__container">
+                <div class="hero__line"></div>
+                <section class="hero__body">
+                    <div class="hero__content">
+                        <h1 class="hero__heading">We’re a creative design agency.</h1>
+                        <p class="hero__desc">A brilliant, modular agency template for startup’s build yours toady.</p>
+                        <div class="hero__cta-group">
+                            <button class="btn">Get in touch</button>
+                            <button class="hero__watch">
+                                <div class="hero__watch-circle">
+                                    <img loading="lazy" src="assets/icon/play.svg" alt="" class="hero__watch-icon">
+                                </div>
+                                <span class="hero__watch-text">Watch Video</span>
+                            </button>
+                        </div>
+                    </div>
+                    <div class="hero__media">
+                        <!-- Decoration flower -->
+                        <figure class="deco">
+                            <div class="deco__flower">
+                                <img loading="lazy" src="assets/icon/ball.svg" alt="" class="deco__ball">
+                                <img loading="lazy" src="assets/icon/line.svg" alt="" class="deco__line">
                             </div>
-                            <span class="hero__watch-text">Watch Video</span>
-                        </button>
-                    </div>
-                </div>
-                <div class="hero__media">
-                    <figure class="hero__deco-wrap">
-                        <div class="hero__deco-flower">
-                            <img loading="lazy" src="assets/icon/ball.svg" alt="" class="hero__deco-ball">
-                            <img loading="lazy" src="assets/icon/line.svg" alt="" class="hero__deco-line">
+                        </figure>
+                        <figure class="deco--rotate ">
+                            <div class="deco__flower">
+                                <img loading="lazy" src="assets/icon/ball.svg" alt="" class="deco__ball">
+                                <img loading="lazy" src="assets/icon/line.svg" alt="" class="deco__line">
+                            </div>
+                        </figure>
+                        <div class="hero__bg-circle"></div>
+                        <div class="hero__images">
+                            <img loading="lazy" src="assets/img/hero-1.jpg" alt="Study room 1" class="hero__image">
+                            <img loading="lazy" src="assets/img/hero-2.jpg" alt="Study room 2" class="hero__image">
+                            <img loading="lazy" src="assets/img/hero-3.jpg" alt="Study room 3" class="hero__image">
                         </div>
-                    </figure>
-                    <figure class="hero__deco-wrap--rotate ">
-                        <div class="hero__deco-flower">
-                            <img loading="lazy" src="assets/icon/ball.svg" alt="" class="hero__deco-ball">
-                            <img loading="lazy" src="assets/icon/line.svg" alt="" class="hero__deco-line">
-                        </div>
-                    </figure>
-                    <div class="hero__bg-circle"></div>
-                    <div class="hero__images">
-                        <img loading="lazy" src="assets/img/hero-1.jpg" alt="Study room 1" class="hero__image">
-                        <img loading="lazy" src="assets/img/hero-2.jpg" alt="Study room 2" class="hero__image">
-                        <img loading="lazy" src="assets/img/hero-3.jpg" alt="Study room 3" class="hero__image">
                     </div>
-                </div>
+    
+                </section>
+            </div>
+        </section>
 
-            </section>
+        <!-- Brands -->
+        <div class="brands">
+            <div class="container">
+                <div class="brands__body">
+                    <div class="brands-item">
+                        <span class="brands-item__name">Google</span>
+                    </div>
+                    <div class="brands-item">
+                        <img src="assets/icon/brands-slack.svg" alt="slack" class="brands-item__logo">
+                        <span class="brands-item__name">slack</span>
+                    </div>
+                    <div class="brands-item">
+                        <img src="assets/icon/brands-agworld.svg" alt="Agworld" class="brands-item__logo">
+                        <span class="brands-item__name">Agworld</span>
+                    </div>
+                    <div class="brands-item">
+                        <span class="brands-item__name">RioTinto</span>
+                    </div>
+                    <div class="brands-item">
+                        <img src="assets/icon/brands-heroku.svg" alt="HEROKU" class="brands-item__logo">
+                        <span class="brands-item__name">HEROKU</span>
+                    </div>
+                </div>
+            </div>
         </div>
-    </section>
+    </main>
+
+    
 </body>
 
 </html>
