--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Public+Sans:wght@300;400;500;600;700;800&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Public+Sans:wght@300;400;500;600;700;800&family=Sonsie+One&display=swap"
         rel="stylesheet">
 
     <link rel="stylesheet" href="assets/css/styles.css">
@@ -113,7 +113,7 @@
                             <img loading="lazy" src="assets/img/hero-3.jpg" alt="Study room 3" class="hero__image">
                         </div>
                     </div>
-    
+
                 </section>
             </div>
         </section>
@@ -122,30 +122,32 @@
         <div class="brands">
             <div class="container">
                 <div class="brands__body">
-                    <div class="brands-item">
-                        <span class="brands-item__name">Google</span>
-                    </div>
-                    <div class="brands-item">
-                        <img src="assets/icon/brands-slack.svg" alt="slack" class="brands-item__logo">
-                        <span class="brands-item__name">slack</span>
-                    </div>
-                    <div class="brands-item">
-                        <img src="assets/icon/brands-agworld.svg" alt="Agworld" class="brands-item__logo">
-                        <span class="brands-item__name">Agworld</span>
-                    </div>
-                    <div class="brands-item">
-                        <span class="brands-item__name">RioTinto</span>
-                    </div>
-                    <div class="brands-item">
-                        <img src="assets/icon/brands-heroku.svg" alt="HEROKU" class="brands-item__logo">
-                        <span class="brands-item__name">HEROKU</span>
-                    </div>
+                    <a href="#!"><span class="brands-item__google">Google</span></a>
+                    <a href="#!">
+                        <div class="brands-slack">
+                            <img src="assets/icon/brands-slack.svg" alt="slack" class="brands-slack__logo">
+                            <span class="brands-slack__name">slack</span>
+                        </div>
+                    </a>
+                    <a href="#!">
+                        <div class="brands-agworld">
+                            <img src="assets/icon/brands-agworld.svg" alt="Agworld" class="brands-agworld__logo">
+                            <span class="brands-agworld__name">Agworld</span>
+                        </div>
+                    </a>
+                    <a href="#!"><span class="brands-riotinto">RioTinto</span></a>
+                    <a href="#!">
+                        <div class="brands-heroku">
+                            <img src="assets/icon/brands-heroku.svg" alt="HEROKU" class="brands-heroku__logo">
+                            <span class="brands-heroku__name">HEROKU</span>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
     </main>
 
-    
+
 </body>
 
 </html>
