--- a/index.html
+++ b/index.html
@@ -204,6 +204,7 @@
             </div>
         </section>
 
+        <!-- About -->
         <section class="about">
             <div class="container">
                 <div class="about__body">
@@ -264,6 +265,40 @@
                             </p>
                         </div>
                     </section>
+                </div>
+            </div>
+        </section>
+
+        <!-- Process -->
+        <section class="process">
+            <div class="container">
+                <div class="process__body">
+                    <span class="title">OURS PROCESS</span>
+                    <h2 class="heading process__heading">A simple ,yet effective three step process</h2>
+                    <div class="process__item  process__item--img">
+                        <span class="process__order">01.</span>
+                        <div class="process__wrap">
+                            <p class="process__name">Project idea</p>
+                            <a href="" class="process__more">Learn More</a>
+                        </div>
+                        <img loading="lazy" src="assets/img/process.png" alt="Process" class="process__thumb">
+                    </div>
+                    <div class="process__item">
+                        <span class="process__order">02.</span>
+                        <div class="process__wrap">
+                            <p class="process__name">Brainstormaing</p>
+                            <a href="" class="process__more">Learn More</a>
+                        </div>
+                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables experience tells us the best solutions are the ones  deated with clients.</p>
+                    </div>
+                    <div class="process__item">
+                        <span class="process__order">03.</span>
+                        <div class="process__wrap">
+                            <p class="process__name">Execution</p>
+                            <a href="" class="process__more">Learn More</a>
+                        </div>
+                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables experience tells us the best solutions are the ones  deated with clients.</p>
+                    </div>
                 </div>
             </div>
         </section>
