--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Public+Sans:wght@300;400;500;600;700;800&family=Sonsie+One&display=swap"
         rel="stylesheet">
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
@@ -289,7 +293,8 @@
                             <p class="process__name">Brainstormaing</p>
                             <a href="" class="process__more">Learn More</a>
                         </div>
-                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables experience tells us the best solutions are the ones  deated with clients.</p>
+                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables
+                            experience tells us the best solutions are the ones deated with clients.</p>
                     </div>
                     <div class="process__item">
                         <span class="process__order">03.</span>
@@ -297,7 +302,73 @@
                             <p class="process__name">Execution</p>
                             <a href="" class="process__more">Learn More</a>
                         </div>
-                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables experience tells us the best solutions are the ones  deated with clients.</p>
+                        <p class="process__desc">We customse a ensure aligment and difine key mileones and defiverables
+                            experience tells us the best solutions are the ones deated with clients.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="project">
+            <div class="container">
+                <div class="project__body">
+                    <section class="project__header">
+                        <h2 class="heading project__heading">A quick glance of our past projects</h2>
+                        <div class="project__infor">
+                            <p class="project__desc">Are you strive for the fast project simplicity and clarity. Great
+                                design is born of those two things.
+                            </p>
+                            <a href="" class="project__browse">
+                                Browse all Projects
+                                <span class="project__arrow"></span>
+                            </a>
+                        </div>
+                    </section>
+
+                    <div class="project__clip">
+                        <img class="project__video" src="assets/video/video-landscape.jpg"></img>
+
+                        <button class="project__symbol">
+                            <img src="assets/icon/play.svg" alt="Play video" class="project__icon">
+                        </button>
+                        .
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Features -->
+        <section class="feature">
+            <div class="container">
+                <div class="feature__body">
+                    <h2 class="heading feature__heading">Share the features that help your customers</h2>
+                    <p class="feature__desc">You already know that the customer experience doesn't end with a sale —
+                        it's an ongoing work in progress that companies should be constantly seeking to improve and
+                        iterate on.</p>
+                    <div class="feature__list">
+                        <section class="feature-item">
+                            <img loading="lazy" src="assets/icon/feature-blog.svg" alt="Feature blog"
+                                class="feature-item__logo">
+                            <h3 class="feature-item__heading">Blog</h3>
+                            <p class="feature-item__desc feature-item__desc--long">We’ve researched numerous agencies
+                                and complied a list of
+                                digital marketing agency blogs you should read to stay ahead of your rivals and succeed
+                                online!</p>
+                        </section>
+                        <section class="feature-item">
+                            <img loading="lazy" src="assets/icon/feature-doc.svg" alt="Feature documentations"
+                                class="feature-item__logo">
+                            <h3 class="feature-item__heading">Documention</h3>
+                            <p class="feature-item__desc">In this article, we discuss the different types of
+                                documentation, what makes for great technical documentation, and provide examples.</p>
+                        </section>
+                        <section class="feature-item">
+                            <img loading="lazy" src="assets/icon/feature-customers.svg" alt="Feature customers"
+                                class="feature-item__logo">
+                            <h3 class="feature-item__heading">Customers</h3>
+                            <p class="feature-item__desc">Your customers have high expectations — and if your business
+                                can't meet them, they're going to leave you for your competitors.</p>
+                        </section>
                     </div>
                 </div>
             </div>
