--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 </figure>
                                 <div class="service-item__content">
                                     <h3 class="service-item__heading">Branding</h3>
-                                    <p class="service-item__desc">Create beautiful Agency website with
+                                    <p class="service-item__desc line-clamp line-3">Create beautiful Agency website with
                                         Boluethat converts more visitors than
                                         any website.</p>
                                 </div>
@@ -182,7 +182,7 @@
                                 </figure>
                                 <div class="service-item__content">
                                     <h3 class="service-item__heading">Web Design</h3>
-                                    <p class="service-item__desc">Create beautiful Agency website with
+                                    <p class="service-item__desc line-clamp line-3">Create beautiful Agency website with
                                         Boluethat converts more visitors than
                                         any website.</p>
                                 </div>
@@ -197,7 +197,7 @@
                                 </figure>
                                 <div class="service-item__content">
                                     <h3 class="service-item__heading">Graphic Design</h3>
-                                    <p class="service-item__desc">Create beautiful Agency website with
+                                    <p class="service-item__desc line-clamp line-3">Create beautiful Agency website with
                                         Boluethat converts more visitors than
                                         any website.</p>
                                 </div>
@@ -313,14 +313,14 @@
             <div class="container">
                 <div class="project__body">
                     <section class="project__header">
-                        <h2 class="heading project__heading">A quick glance of our past projects</h2>
+                        <h2 class="heading heading--line">A quick glance of our past projects</h2>
                         <div class="project__infor">
                             <p class="project__desc">Are you strive for the fast project simplicity and clarity. Great
                                 design is born of those two things.
                             </p>
-                            <a href="" class="project__browse">
+                            <a href="#!" class="project__browse">
                                 Browse all Projects
-                                <span class="project__arrow"></span>
+                                <span class="arrow project__arrow"></span>
                             </a>
                         </div>
                     </section>
@@ -331,7 +331,8 @@
                         <button class="project__symbol">
                             <img src="assets/icon/play.svg" alt="Play video" class="project__icon">
                         </button>
-                        .
+                        <img src="assets/icon/project-line.svg" alt="Project line" class="project__line">
+                        <img src="assets/icon/ball.svg" alt="Project" class="project__ball">
                     </div>
                 </div>
             </div>
@@ -373,8 +374,174 @@
                 </div>
             </div>
         </section>
+
+        <!-- Blog -->
+        <section class="blog">
+            <div class="container">
+                <div class="blog__body">
+                    <span class="title">BLOG & ARTICLES</span>
+                    <div class="blog__header">
+                        <h2 class="heading heading--line blog__heading">Take a look at our latest articles and resources
+                        </h2>
+                        <p class="blog__desc">The best agency are the ones ideated with clients. we corporate your ideas
+                            with memorable</p>
+                    </div>
+
+                    <section class="blog__list">
+                        <a href="#!">
+                            <article class="blog-item">
+                                <figure>
+                                    <img src="assets/img/blog-1.png" loading="lazy" alt="Blog 1"
+                                        class="blog-item__thumb">
+                                </figure>
+                                <div class="blog-item__content">
+                                    <span class="blog-item__tag">STORIES</span>
+                                    <h3 class="blog-item__heading line-clamp">What did we learn from nunning over 100
+                                        design
+                                        sprints in less the year?</h3>
+                                    <div class="blog-item__line"></div>
+                                    <p class="blog-item__date">JANUARY 29, 2022</p>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#!">
+                            <article class="blog-item">
+                                <figure>
+                                    <img src="assets/img/blog-2.jpg" loading="lazy" alt="Blog 2"
+                                        class="blog-item__thumb">
+                                </figure>
+                                <div class="blog-item__content">
+                                    <span class="blog-item__tag">STORIES</span>
+                                    <h3 class="blog-item__heading line-clamp blog-item__heading--short">The difference
+                                        between the UI/UX design a simple guide for beginner’s</h3>
+                                    <div class="blog-item__line"></div>
+                                    <p class="blog-item__date">JANUARY 29, 2022</p>
+                                </div>
+                            </article>
+                        </a>
+                        <a href="#!">
+                            <article class="blog-item">
+                                <figure>
+                                    <img src="assets/img/blog-3.png" loading="lazy" alt="Blog 3"
+                                        class="blog-item__thumb">
+                                </figure>
+                                <div class="blog-item__content">
+                                    <span class="blog-item__tag">STORIES</span>
+                                    <h3 class="blog-item__heading line-clamp">How marketing can help your business more
+                                        than
+                                        anything.</h3>
+                                    <div class="blog-item__line"></div>
+                                    <p class="blog-item__date">JANUARY 29, 2022</p>
+                                </div>
+                            </article>
+                        </a>
+                    </section>
+                </div>
+            </div>
+        </section>
     </main>
 
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__body">
+                <section class="footer__infor">
+                    <div class="footer__data">
+                        <span class="footer__heading">Sign up for our newsletter</span>
+                        <form action="" class="footer__form">
+                            <input type="email" name="email" id="email" class="footer__input"
+                                placeholder="Enter your email">
+                            <button class="footer__btn">
+                                <span class="arrow"></span>
+                            </button>
+                        </form>
+    
+                        <div class="footer__socials">
+                            <a href="" class="footer-socials">
+                                <img src="" alt="" class="footer-social__icon">
+                            </a>
+                            <a href="" class="footer-socials">
+                                <img src="" alt="" class="footer-social__icon">
+                            </a>
+                            <a href="" class="footer-socials">
+                                <img src="" alt="" class="footer-social__icon">
+                            </a>
+                        </div>
+                    </div>
+                    <div class="footer__contact">
+                        <section class="footer-col">
+                            <h3 class="footer-col__heading">Pages</h3>
+                            <ul>
+                                <li>
+                                    <a href="" class="footer-col__link">Home</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">About</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Blog Post</a>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="footer-col">
+                            <h3 class="footer-col__heading">Product</h3>
+                            <ul>
+                                <li>
+                                    <a href="" class="footer-col__link">Home</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">About</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Blog Post</a>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="footer-col">
+                            <h3 class="footer-col__heading">Overview</h3>
+                            <ul>
+                                <li>
+                                    <a href="" class="footer-col__link">Home 1</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Home 2</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Home 3</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Pricing 1</a>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="footer-col">
+                            <h3 class="footer-col__heading">About us</h3>
+                            <ul>
+                                <li>
+                                    <a href="" class="footer-col__link">Team</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Investors</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Blog</a>
+                                </li>
+                                <li>
+                                    <a href="" class="footer-col__link">Press</a>
+                                </li>
+                            </ul>
+                        </section>
+                    </div>
+                </section>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
