--- a/index.html
+++ b/index.html
@@ -58,16 +58,16 @@
                 <nav class="nav">
                     <ul class="nav__list">
                         <li class="nav__item nav__item--active">
-                            <a href="#!" class="nav__link" title="Home">Home</a>
+                            <a href="#" class="nav__link" title="Home">Home</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#!" class="nav__link" title="About">About</a>
+                            <a href="#about" class="nav__link" title="About">About</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#!" class="nav__link" title="Blog">Blog</a>
+                            <a href="#blog" class="nav__link" title="Blog">Blog</a>
                         </li>
                         <li class="nav__item">
-                            <a href="#!" class="nav__link" title="Contact">Contact</a>
+                            <a href="#footer" class="nav__link" title="Contact">Contact</a>
                         </li>
                     </ul>
                 </nav>
@@ -209,7 +209,7 @@
         </section>
 
         <!-- About -->
-        <section class="about">
+        <section id="about" class="about">
             <div class="container">
                 <div class="about__body">
                     <div class="about__media">
@@ -376,7 +376,7 @@
         </section>
 
         <!-- Blog -->
-        <section class="blog">
+        <section id="blog" class="blog">
             <div class="container">
                 <div class="blog__body">
                     <span class="title">BLOG & ARTICLES</span>
@@ -442,7 +442,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="footer">
+    <footer id="footer" class="footer">
         <div class="container">
             <div class="footer__body">
                 <section class="footer__infor">
@@ -451,94 +451,99 @@
                         <form action="" class="footer__form">
                             <input type="email" name="email" id="email" class="footer__input"
                                 placeholder="Enter your email">
-                            <button class="footer__btn">
-                                <span class="arrow"></span>
+                            <button class="footer__btn" type="submit">
+                                <span class="arrow footer__arrow"></span>
                             </button>
                         </form>
-    
+
                         <div class="footer__socials">
-                            <a href="" class="footer-socials">
-                                <img src="" alt="" class="footer-social__icon">
+                            <a href="#!" class="footer-social">
+                                <i class="fa-brands fa-facebook-f"></i>
                             </a>
-                            <a href="" class="footer-socials">
-                                <img src="" alt="" class="footer-social__icon">
+                            <a href="#!" class="footer-social">
+                                <i class="fa-brands fa-instagram"></i>
                             </a>
-                            <a href="" class="footer-socials">
-                                <img src="" alt="" class="footer-social__icon">
+                            <a href="#!" class="footer-social">
+                                <i class="fa-brands fa-twitter"></i>
                             </a>
                         </div>
                     </div>
                     <div class="footer__contact">
                         <section class="footer-col">
                             <h3 class="footer-col__heading">Pages</h3>
-                            <ul>
+                            <ul class="footer-col__list">
                                 <li>
-                                    <a href="" class="footer-col__link">Home</a>
+                                    <a href="#!" class="footer-col__link">Home</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">About</a>
+                                    <a href="#!" class="footer-col__link">About</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Blog</a>
+                                    <a href="#!" class="footer-col__link">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Blog Post</a>
+                                    <a href="#!" class="footer-col__link">Blog Post</a>
                                 </li>
                             </ul>
                         </section>
                         <section class="footer-col">
                             <h3 class="footer-col__heading">Product</h3>
-                            <ul>
+                            <ul class="footer-col__list">
                                 <li>
-                                    <a href="" class="footer-col__link">Home</a>
+                                    <a href="#!" class="footer-col__link">Home</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">About</a>
+                                    <a href="#!" class="footer-col__link">About</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Blog</a>
+                                    <a href="#!" class="footer-col__link">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Blog Post</a>
+                                    <a href="#!" class="footer-col__link">Blog Post</a>
                                 </li>
                             </ul>
                         </section>
                         <section class="footer-col">
                             <h3 class="footer-col__heading">Overview</h3>
-                            <ul>
+                            <ul class="footer-col__list">
                                 <li>
-                                    <a href="" class="footer-col__link">Home 1</a>
+                                    <a href="#!" class="footer-col__link">Home 1</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Home 2</a>
+                                    <a href="#!" class="footer-col__link">Home 2</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Home 3</a>
+                                    <a href="#!" class="footer-col__link">Home 3</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Pricing 1</a>
+                                    <a href="#!" class="footer-col__link">Pricing 1</a>
                                 </li>
                             </ul>
                         </section>
                         <section class="footer-col">
                             <h3 class="footer-col__heading">About us</h3>
-                            <ul>
+                            <ul class="footer-col__list">
                                 <li>
-                                    <a href="" class="footer-col__link">Team</a>
+                                    <a href="#!" class="footer-col__link">Team</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Investors</a>
+                                    <a href="#!" class="footer-col__link">Investors</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Blog</a>
+                                    <a href="#!" class="footer-col__link">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="" class="footer-col__link">Press</a>
+                                    <a href="#!" class="footer-col__link">Press</a>
                                 </li>
                             </ul>
                         </section>
                     </div>
                 </section>
+
+                <div class="footer__line"></div>
+                <div class="footer__copyright">
+                    <p class="footer__copyright-text">MODULARS - 23/12/2023</p>
+                </div>
             </div>
         </div>
     </footer>
