Fix service btn

--- a/index.html
+++ b/index.html
@@ -156,7 +156,18 @@
             <div class="container">
                 <div class="service__body">
                     <span class="title">OUR SERVICES</span>
-                    <h2 class="heading service__heading">We offer a wide range of design services</h2>
+                    <div class="service__header">
+                        <h2 class="heading service__heading">We offer a wide range of design services</h2>
+                        <div class="service__action">
+                            <button class="service__btn">
+                                <span class="arrow service__arrow service__arrow--reverse"></span>
+                            </button>
+
+                            <button class="service__btn">
+                                <span class="arrow service__arrow"></span>
+                            </button>
+                        </div>
+                    </div>
                     <div class="service__list">
                         <a href="#!">
                             <article class="service-item">
